@@ -90,6 +90,9 @@ Core and Builtins
 Library
 -------
 
+- tarfile.py: Correctly detect bzip2 compressed streams with blocksizes
+  other than 900k.
+
 - Issue #13439: Fix many errors in turtle docstrings.
 
 - Issue #13487: Make inspect.getmodule robust against changes done to
